--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,13 @@
   padding: 0;
   font-family: Poppins, sans-serif;
   box-sizing: border-box;
+  list-style-type: none;
+}
+header {
+  background-color: #7887ab;
+  text-align: center;
+  color: #2f4372;
+  padding: 3rem;
 }
 body {
   max-width: 800px;
@@ -17,42 +24,72 @@ body {
     color: #fff;
     text-align: center;
     gap: 50px;
+    #app {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      min-height: 90vh;
+      color: #fff;
+      text-align: center;
+      gap: 10px;
+      ul {
+        list-style-type: none;
+        padding: 10px;
+        margin: 0;
+        max-height: 80vh;
+        /* place-items: center; */
+
+        li {
+          display: grid;
+          grid-template-columns: 10fr repeat(2, 1fr);
+          grid-template-rows: 1fr;
+          grid-column-gap: 0px;
+          grid-row-gap: 0px;
+          gap: 15px;
+          height: 40px;
+          place-items: center;
+          font-size: 16px;
+          span {
+            cursor: pointer;
+          }
+          button {
+            text-align: center;
+            justify-items: end;
+            background-color: #add8e6;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.2s; /* 添加过渡效果 */
+          }
+          &:hover {
+            transform: translateY(-2px); /* 点击后下降2px */
+            background-color: #90a4c7;
+          }
+          margin-bottom: 10px;
+          input[type="checkbox"] {
+            margin-right: 5px;
+          }
+        }
+      }
+    }
   }
 }
-header {
-  background-color: #7887ab;
-  text-align: center;
-  color: #2f4372;
-  padding: 3rem;
-}
-footer {
-  text-align: center;
-  padding: 15px;
-  background-color: #7887ab;
-  font-size: 14px;
-}
+
 p {
   white-space: nowrap;
 }
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-}
 
 .modal-content {
-  background-color: #7887ab;
+  background-color: #f3f3ee;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+  gap: 10px;
+  color: #000;
 }
 
 .close {
@@ -61,13 +98,20 @@ p {
   font-size: 28px;
   font-weight: bold;
 }
-
 .close:hover,
 .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
 }
+.priorityBox {
+  display: flex;
+  gap: 10px;
+  text-align: center;
+  justify-content: center;
+}
+
+/* 
 
 :root {
   --clr-primary: rgb(54, 112, 199);
@@ -76,7 +120,8 @@ p {
   --clr-warning: rgb(99, 36, 36);
 }
 
-*,
+*/
+
 *::before,
 *::after {
   font-family: inherit;
@@ -106,115 +151,12 @@ form {
   opacity: 0.7;
 }
 
-.btn.delete {
-  opacity: 0.7;
-  font-size: 1rem;
-  transition: color 200ms;
-  border: 1px solid #354977;
-  color: #fff;
-  padding: 3px;
-}
-
-.btn.delete:hover {
-  color: var(--clr-warning);
-}
-
-.new {
-  background: transparent;
-  border: 0;
-  color: inherit;
-  border-bottom: 1px solid currentColor;
-  font-size: inherit;
-  outline: none;
-  padding: 0.25em;
-  transition: border-bottom 150ms ease-in;
-  order: 2;
-}
-
-.new::-webkit-input-placeholder {
-  opacity: 0.4;
-}
-
-.new:-ms-input-placeholder {
-  opacity: 0.4;
-}
-
-.new::-ms-input-placeholder {
-  opacity: 0.4;
-}
-
-.new::placeholder {
-  opacity: 0.4;
-}
-
-.new:focus {
-  border-bottom-width: 3px;
-}
-
-.new:focus::-webkit-input-placeholder {
-  opacity: 0.15;
-}
-
-.new:focus:-ms-input-placeholder {
-  opacity: 0.15;
-}
-
-.new:focus::-ms-input-placeholder {
-  opacity: 0.15;
-}
-
-.new:focus::placeholder {
-  opacity: 0.15;
-}
-
-.new.list {
-  font-size: 1.1rem;
-}
-
-.new.task {
-  margin-bottom: 0;
-}
-
-.active-list {
-  font-weight: 700;
-}
-
-.todo-list {
-  --spacer: 2rem;
-  grid-area: active;
-  background: var(--clr-light);
-  color: var(--clr-dark);
-}
-
 .todo-header {
   padding: var(--spacer);
   background: #e4e4e4;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.list-title {
-  margin: 0 1em 0 0;
-}
-
-.task-count {
-  margin: 0;
-  font-size: 1rem;
-}
-
-.todo-body {
-  padding: var(--spacer);
-  position: relative;
-}
-.new-task-creator {
-  display: flex;
-  align-items: center;
-  margin-bottom: 1em;
-  gap: 1em;
-}
-.new-task-creator .create {
-  color: var(--clr-primary);
 }
 
 [type="checkbox"] {
@@ -244,75 +186,21 @@ form {
   opacity: 0.1;
 }
 
-.custom-checkbox {
-  --size: 0.75em;
-  display: inline-block;
-  width: var(--size);
-  height: var(--size);
-  margin-right: var(--size);
-  cursor: pointer;
-  border: 2px solid currentColor;
-  border-radius: 50%;
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  transition: -webkit-transform 300ms ease-in-out;
-  transition: transform 300ms ease-in-out;
-  transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
+.priority-high {
+  background-color: #ff6961;
 }
-
-.task:hover .custom-checkbox,
-[type="checkbox"]:focus + label .custom-checkbox {
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
-  color: var(--clr-primary);
+.priority-medium {
+  background-color: #ffc300;
 }
-
-[type="checkbox"]:checked + label .custom-checkbox {
-  background: var(--clr-primary);
-  border-color: var(--clr-primary);
-  box-shadow: inset 0 0 0px 2px white;
+.priority-low {
+  background-color: #77dd77;
 }
-
-[type="checkbox"]:checked + label {
-  opacity: 0.5;
+.priority-none {
+  background-color: #d3d3d3;
 }
-
-.task label::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  left: 1.5em;
-  top: 50%;
-  height: 3px;
-  background: currentColor;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transform-origin: right;
-  transform-origin: right;
-  transition: -webkit-transform 150ms ease-in-out;
-  transition: transform 150ms ease-in-out;
-  transition: transform 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
+footer {
+  text-align: center;
+  padding: 15px;
+  background-color: #7887ab;
+  font-size: 14px;
 }
-
-[type="checkbox"]:checked + label::after {
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1);
-  -webkit-transform-origin: left;
-  transform-origin: left;
-}
-
-.delete-stuff {
-  display: flex;
-  justify-content: space-evenly;
-  position: absolute;
-  width: 100%;
-  left: 0;
-  bottom: -35px;
-  color: var(--clr-light);
-}
-
-.priority-high { background-color: #ff6961; } 
-.priority-medium { background-color: #ffC300; }
-.priority-low { background-color: #77dd77; }
-.priority-none { background-color: #d3d3d3; } 
